2003-05-05  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
                                                                                
        * configure.in: Added cy to ALL_LINGUAS
        * po/cy.po: Added

2003-05-04  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" in ALL_LINGUAS

2003-05-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: move down the ranking the tests to recognise
	XML files, and move the xml-derived formats above it. This fixes
	detection of uncompressed Dia, Gnumeric and Abiword documents
	(Closes: #110958)

2003-04-26  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: add magic for some MPEG program streams

2003-04-24  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "ar" "cs" to ALL_LINGUAS.

2003-04-16  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added more magic for ASF and ASX files, and
	for MP3s with padded headers (ie. broken)

2003-04-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: more Real video mime magic

2003-04-04  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: SMIL playlists could be recognised as HTML,
	moved tests up the rank

2003-04-04  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added more magic for Real playlists files and 
	SMIL playlists

2003-04-02  Paolo Maggi  <paolo.maggi@polito.it>

	* gnome-vfs-mime-magic: added a simple rule to recognise xml files

	* gnome-vfs.keys.in: added desription for text/x-po (gettext 
	  translation)

	* gnome-vfs.mime: text/x-patch and text/x-po

2003-04-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added Corel Draw magic, mime-type and description

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* gnome-vfs.keys.in: add descriptions for application/x-gnome-theme
	and application/x-gnome-theme-installed, from themus, as HEAD is no
	longer string-frozen.

2003-03-29  Christian Schaller <uraeus@gnome.org>